ThioUtils - Add copyTextToClipboard function

--- a/Extendscript Libraries/General/Extendscript-ThioUtils/Extendscript-ThioUtils.vcxproj.filters
+++ b/Extendscript Libraries/General/Extendscript-ThioUtils/Extendscript-ThioUtils.vcxproj.filters
@@ -18,10 +18,24 @@
     <ClInclude Include="ThioUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Include\SoCClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\SoSharedLibDefs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThioUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Extendscript-ThioUtils.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
