--- a/Extendscript Libraries/General/Extendscript-ThioUtils/Extendscript-ThioUtils.vcxproj
+++ b/Extendscript Libraries/General/Extendscript-ThioUtils/Extendscript-ThioUtils.vcxproj
@@ -123,6 +123,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AssemblyDebug>true</AssemblyDebug>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
