ThioUtils - Automatically set dll version properties

--- a/Extendscript Libraries/General/Extendscript-ThioUtils/Extendscript-ThioUtils.vcxproj
+++ b/Extendscript Libraries/General/Extendscript-ThioUtils/Extendscript-ThioUtils.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Include\SoSharedLibDefs.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ThioUtils.h" />
+    <ClInclude Include="VERSION.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThioUtils.cpp" />
